# eurorack

./: .gitignore  README.md
12v_power/: 12v_power.kicad_pcb  12v_power.kicad_prl  12v_power.kicad_pro  12v_power.kicad_sch
bt_module/: bom.csv  bt_module-top-pos.csv  bt_module.kicad_pcb  bt_module.kicad_prl  bt_module.kicad_pro  bt_module.kicad_sch
csgo_gsi_server/: csgo_gsi.brd  csgo_gsi.ino  csgo_gsi.sch  panel.SLDPRT
dc_isolator/: dc_isolator.kicad_pcb  dc_isolator.kicad_prl  dc_isolator.kicad_pro  dc_isolator.kicad_sch
ecg-2hp/: bom.csv  ecg-top-pos.csv  ecg.kicad_pcb  ecg.kicad_prl  ecg.kicad_pro  ecg.kicad_sch
geiger_clock/: geiger_module.brd  geiger_module.sch  geiger_panel.brd
google_assistant/: fiber_optics_mount.STL  ga_module.brd
line_out/: line_out.kicad_pcb  line_out.kicad_prl  line_out.kicad_pro  line_out.kicad_sch
mega_12v_pwr/: mega_12v_pwr.kicad_pcb  mega_12v_pwr.kicad_prl  mega_12v_pwr.kicad_pro  mega_12v_pwr.kicad_sch
milkdrop/v2 - tx2/software/rp2040-hid-audio/: CMakeLists.txt
milkdrop/v2 - tx2/software/rp2040-hid-audio/examples/usb_microphone/: CMakeLists.txt  main.c  tusb_config.h  usb_descriptors.c  usb_microphone.c
mini_12v_pwr/: mini_12v_pwr.kicad_pcb  mini_12v_pwr.kicad_prl  mini_12v_pwr.kicad_pro  mini_12v_pwr.kicad_sch
neopixel_controller/: light_module.brd  light_module.sch  neopixel_controller.ino
noise_toaster/: readme.md
power_bus/: power_bus.kicad_pcb  power_bus.kicad_prl  power_bus.kicad_pro  power_bus.kicad_sch
safety_valve/: Safety Valve front panel.brd  Safety Valve.brd  Safety Valve.sch
(+278 files in other folders)
